WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163093
Variation fonts don't affect glyph advances
https://bugs.webkit.org/show_bug.cgi?id=163093
Summary
Variation fonts don't affect glyph advances
Myles C. Maxfield
Reported
2016-10-06 17:28:16 PDT
Variation fonts don't affect glyph advances
Attachments
Patch
(7.70 KB, patch)
2016-10-06 17:35 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(7.75 KB, patch)
2016-10-06 17:39 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-10-06 17:35:49 PDT
Created
attachment 290877
[details]
Patch
Myles C. Maxfield
Comment 2
2016-10-06 17:39:58 PDT
Created
attachment 290878
[details]
Patch
WebKit Commit Bot
Comment 3
2016-10-06 20:23:58 PDT
Comment on
attachment 290878
[details]
Patch Clearing flags on attachment: 290878 Committed
r206896
: <
http://trac.webkit.org/changeset/206896
>
WebKit Commit Bot
Comment 4
2016-10-06 20:24:03 PDT
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 5
2016-10-20 09:27:28 PDT
***
Bug 163732
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug